# CEP-dev

CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/: README_PACK4.md  pyproject.toml
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/.github/workflows/: cep-pack3.yml
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_ci_pack/: README.md
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_ci_pack/_schema_pack/schemas/: p3-definitions.schema.json
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_ci_pack/schemas/: p0-source-index.schema.json  p1q-qa-instrumentation.schema.json
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_ci_pack/scripts/: validate_schemas_load.py
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_pack3/: README.md
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_pack3/schemas/: defs.schema.json
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_pack3/tests/: test_fixture_generator.py  test_validators.py
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/_schema_pack/: README_GENERATED.txt
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/policies/: bagit_tooling_pin.md  gate_canonical_source_policy.md
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/schemas/: compatibility_map.json
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/scripts/: check_schema_compatibility.py  evidence_coverage.py  gate_consistency.py  validate_fixtures.py  verify_bagit.py
CEP_v2_1_1_Pack4_Evidence_Gates_Compatibility_BagIt/tests/: test_evidence_coverage.py  test_gate_consistency.py  test_schema_compatibility.py
(+32 files in other folders)
